--- a/PyChat.html
+++ b/PyChat.html
@@ -78,9 +78,7 @@ html {
         <div class="dropdown">
             <button onclick="myFunction()" class="dropbtn">Click Me!</button>
             <div id="myDropdown" class="dropdown-content">
-              <a href="PyChat64b.zip">64 Bit Download</a>
-              <a href="PyChat32b.zip">32 Bit Download</a>
-              <a href="PyChat86x.zip">86x Download</a>
+              <a href="PyChat64b.zip">Version 1.0 Download</a>
             </div>
           </div>
           
