got the pages site to work

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ html {
 
 <div style="height:1000px;background-color:rgba(210, 210, 210, 0.276);font-size:36px">
     <div id="Some_Text">
-        <header><h1>PyChat!!</h1></header>
+        <header id="PyChat"><h1>PyChat!!</h1></header>
         <h3><b>What Is PyChat?!?</b></h3>
         <p>PyChat is a free and safe program made specifically for chatting with friends!</p>
         <h3><b>Why is it called "PyChat?"</b></h3>
