--- a/index.html
+++ b/index.html
@@ -78,18 +78,14 @@ html {
         <div class="dropdown">
             <button onclick="myFunction()" class="dropbtn">Click Me!</button>
             <div id="myDropdown" class="dropdown-content">
-              <a href="PyChat64b.zip">Version 1.0 Download</a>
+              <a href="#" style="color:rgb(112, 112, 112);">Work In Progress</a>
             </div>
           </div>
           
           <script>
-          /* When the user clicks on the button, 
-          toggle between hiding and showing the dropdown content */
           function myFunction() {
             document.getElementById("myDropdown").classList.toggle("show");
           }
-          
-          // Close the dropdown if the user clicks outside of it
           window.onclick = function(event) {
             if (!event.target.matches('.dropbtn')) {
               var dropdowns = document.getElementsByClassName("dropdown-content");
@@ -103,7 +99,7 @@ html {
             }
           }
           </script>
-          <p style="font-size: small; color: #424242;">© Agon LLC. 2022 <b>No Rights Reserved.</b></p>
+          <p style="font-size: small; color: #424242;">© ValidIdiot 2022 <b>No Rights Reserved.</b></p>
     </div>
 
 </div>
