--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ html {
             }
           }
           </script>
-          <p style="font-size: small; color: #424242;">© ValidIdiot 2022 <b>No Rights Reserved.</b></p>
+          <p style="font-size: small; color: #b5e4ff;">© ValidIdiot 2022 <b>No Rights Reserved.</b></p>
     </div>
 
 </div>
